Update AcceptanceTest add a last modified header test

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,6 +20,9 @@
             <text outputFile="build/coverage.txt"/>
         </report>
     </coverage>
+    <php>
+        <env name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF"/>
+    </php>
     <source>
         <include>
             <directory suffix=".php">src</directory>
