--- a/composer.json
+++ b/composer.json
@@ -39,5 +39,12 @@
         "test": "vendor/bin/phpunit --no-coverage",
         "test-coverage": "vendor/bin/phpunit --coverage-html build/coverage",
         "analyze": "phpstan analyze --no-progress --memory-limit=1024M"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Kudashevs\\LaravelLastModified\\Providers\\LastModifiedServiceProvider"
+            ]
+        }
     }
 }
