--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require-dev": {
         "orchestra/testbench": "^8.0|^9.0",
+        "mockery/mockery": "^1.6",
         "phpstan/phpstan": "^1.10|^2.0",
         "phpunit/phpunit": "^10.1|^11.0"
     },
